java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testMakeClassAbstract2-hints.pass
Make class MakeClassAbstract2 abstract
